# Theo-AI

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  theocode
agent-library/awesome-ai-apps-main/: README.md
agent-library/awesome-ai-apps-main/advance_ai_agents/car_finder_agent/: api.env
agent-library/awesome-ai-apps-main/advance_ai_agents/content_team_agent/: README.md
agent-library/awesome-ai-apps-main/fine_tuning/: Fine_tuning.ipynb  README.md
agent-library/awesome-ai-apps-main/memory_agents/brand_reputation_monitor/: memori.db
agent-library/awesome-ai-apps-main/memory_agents/job_search_agent/: memori.db
agent-library/awesome-ai-apps-main/simple_ai_agents/llm_router/: README.md
agent-library/awesome-ai-apps-main/starter_ai_agents/langchain_langgraph_starter/: LangChain_Langgraph_Nebius_Starter.ipynb  README.md
agent-library/awesome-ai-apps-main/voice_agents/livekit_gemini_agents/: main.py  pyproject.toml
agent-library/awesome-ai-apps-main/voice_agents/pipecat_agent/: README.md  main.py  pyproject.toml
server/: app.py
src/theocode/: __init__.py  __main__.py  agent.py  repl.py  tools.py
ui/: package.json
ui/src/: App.css  App.jsx  index.css
vscode-extension/: package.json
vscode-extension/src/: extension.ts
