[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theocode"
version = "1.0.0"
description = "Theo Code — Sovereign Coding Intelligence by Theodore Quinlan"
authors = [{name = "Theodore Quinlan", email = "t.quinlan@newcastle.ac.uk"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
theocode = "theocode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/theocode"]
